[package]
name = "qmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

quinn = "0.8"
rustls = "0.20"
rcgen = "0.8"

serde = { version = "1", features = ["derive"] }
bincode = "1"

nonsense-util = { path = "../nonsense-util" }

